# taskboardcli

./: .gitignore  Cargo.toml  README.md
data/: lists.json
src/: main.rs
