[package]
name = "taskboardcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.33", features = ["serde"]}
crossterm = { version = "0.27.0", features = ["serde"]}
home = "0.5.9"
rand = "0.8.5"
ratatui = "0.26.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
thiserror = "1.0.56"
